--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "moneyphp/money": "^3.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "^5.2.7",
+        "phpunit/phpunit": "^5.2.7",
         "squizlabs/php_codesniffer": "^3.2.0",
         "psy/psysh": "^0.9.4" 
     },
