--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,4 +1,4 @@
-name: PHP Composer
+name: PHP lint & test
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Setup Node.js environment
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v2-beta
     
     - name: Cache Node.js packages
       id: node-cache
