--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,6 +30,11 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
     
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '5.6'
+
     - name: Validate composer.json and composer.lock
       run: composer validate
       
@@ -48,7 +53,7 @@ jobs:
 
     - name: Install composer dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest -n
+      run: composer install --prefer-dist --no-progress -n
       
     - name: PHP Lint
       run: node_modules/.bin/grunt phpcs
