--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -15,6 +15,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      fail-fast: true
+      max-parallel: 1
+      matrix:
+        php: ['7.1', '7.4', '8.1']
+
     steps:
     - uses: actions/checkout@v2
       
@@ -33,7 +39,7 @@ jobs:
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
-        php-version: '5.6'
+        php-version: ${{ matrix.php }}
 
     - name: Validate composer.json and composer.lock
       run: composer validate
