--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: true
       max-parallel: 1
       matrix:
-        php: ['7.1', '7.4', '8.1']
+        php: ['7.2', '7.4', '8.1']
 
     steps:
     - uses: actions/checkout@v3
@@ -59,7 +59,7 @@ jobs:
 
     - name: Install composer dependencies
       if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress -n
+      run: composer update --prefer-dist --no-progress -n
       
     - name: PHP Lint
       run: node_modules/.bin/grunt phpcs
