--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -49,9 +49,9 @@ jobs:
       uses: actions/cache@v3
       with:
         path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        key: ${{ runner.os }}-php${{ matrix.php }}-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
-          ${{ runner.os }}-php-
+          ${{ runner.os }}-php${{ matrix.php }}-
 
     - name: Install node dependencies
       if: steps.node-cache.outputs.cache-hit != 'true'
