--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,10 @@
         "classmap": [
             "tests/Univapay"
         ]
+    },
+    "config": {
+        "platform": {
+            "php": "7.2"
+        }
     }
 }
