--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: true
       max-parallel: 1
       matrix:
-        php: ['7.2', '7.4', '8.1']
+        php: ['7.2', '7.4', '8.1', '8.2', '8.3']
 
     steps:
     - uses: actions/checkout@v3
