--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 ### Composer ###
 composer.phar
+composer.lock
 /vendor/
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
@@ -84,6 +85,7 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Runtime data
 pids
