--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -23,34 +23,37 @@ jobs:
         php: ['7.2', '7.4', '8.1', '8.2', '8.3']
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3
-      with:
-        node-version: 'lts/*'
-    
-    - name: Cache Node.js packages
-      id: node-cache
-      uses: actions/cache@v3
-      with:
-        path: node_modules
-        key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
-    
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php }}
 
-    - name: Install node dependencies
-      if: steps.node-cache.outputs.cache-hit != 'true'
-      run: npm install
+    - name: Get composer cache directory
+      id: composer-cache
+      run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+    
+    - name: Cache dependencies
+      uses: actions/cache@v4
+      with:
+        path: ${{ steps.composer-cache.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ matrix.php }}-${{ hashFiles('**/composer.json') }}
+        restore-keys: ${{ runner.os }}-composer-${{ matrix.php }}-
+    
+    - name: Install dependencies
+      run: composer update
 
-    - name: Install composer dependencies
-      run: composer install
-      
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v4
+      with:
+        node-version: 'lts/*'
+        cache: 'npm'
+        cache-dependency-path: package-lock.json
+
+    - name: Install node dependencies
+      run: npm ci
+
     - name: PHP Lint
       run: node_modules/.bin/grunt phpcs
       
