--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -42,7 +42,7 @@ jobs:
         restore-keys: ${{ runner.os }}-composer-${{ matrix.php }}-
     
     - name: Install dependencies
-      run: composer update
+      run: composer update --prefer-dist --no-progress -n
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v4
