--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": ">=7.2",
         "rmccue/requests": "^2.0.1",
-        "moneyphp/money": "^3.3.1"
+        "moneyphp/money": "^3.3.1|^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5.39",
@@ -24,10 +24,5 @@
         "classmap": [
             "tests/Univapay"
         ]
-    },
-    "config": {
-        "platform": {
-            "php": "7.2"
-        }
     }
 }
